[package]
name = "discordbot"
version = "0.1.0"
authors = ["Celia"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10.5"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
tokio-postgres = "0.7.0"
rand = "0.8.0"
reqwest = { version= "0.11.2", features = ["json"] }
serde_json = "1.0.64"
serde = { version = "1.0.125", features = ["derive"] }
